@@ -21,10 +21,10 @@
 #include "DataAbstractModule.h"
 
 DataConnection::DataConnection ( DataAbstractItem* src, DataAbstractItem* dst) : DataAbstractItem ( src ) {
-    qDebug() << __PRETTY_FUNCTION__;
+//     qDebug() << __PRETTY_FUNCTION__;
     m_src = src;
     m_dst = dst;
-    dump();
+//     dump();
 }
 
 DataConnection::~DataConnection() {
